# itapk_exam

./: .gitignore  CMakeLists.txt  HOW_TO_RUN  README.md  main.cpp
diagrams/: class.xml  manipulateData
include/: DataPlotter.h  Distributor.h  Regulator.cpp  Regulator.h  Sensor.h  SensorData.h  SensorInfo.h  Subscriber.h  Units.h  manipulateData.h  units.h
include/sensors/: Imu.h  ImuSensor.h  UltraSonicSensor.h
src/: DataPlotter.cpp  Distributor.cpp  ImuSensor.cpp  Regulator.cpp  Sensor.cpp  SensorData.cpp  UltraSonicSensor.cpp  Units.cpp  manipulateData.cpp
